apps/data/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  annotations:
    cert-manager.io/cluster-issuer: "cloudflare-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.atoca.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 5050
  tls:
    - hosts:
        - pgadmin.atoca.house
      secretName: pgadmin-tls
